[gd_scene load_steps=9 format=2]

[ext_resource path="res://lava/Lava004_2K_Roughness.jpg" type="Texture" id=1]
[ext_resource path="res://Gas.tres" type="Material" id=2]
[ext_resource path="res://AI.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="BoxShape" id=3]

[sub_resource type="CubeMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 1 )

[node name="Spatial" type="Spatial"]

[node name="AI" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20.9222, 0 )
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="AI"]
transform = Transform( -1.50874e-07, -0.1362, 0.990681, 6.14845e-08, 0.990681, 0.1362, -1, 8.14605e-08, -1.41094e-07, 10.192, 0.755, -0.232 )

[node name="CollisionShape" type="CollisionShape" parent="AI"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="AI"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
material_override = ExtResource( 2 )
mesh = SubResource( 2 )
material/0 = null

[node name="Area" type="Node" parent="."]

[node name="Floor" type="KinematicBody" parent="Area"]

[node name="CollisionShape" type="CollisionShape" parent="Area/Floor"]
transform = Transform( 40, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Area/Floor"]
transform = Transform( 40, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Wall1" type="KinematicBody" parent="Area"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.148224, -32.7736, -40.3638 )

[node name="CollisionShape" type="CollisionShape" parent="Area/Wall1"]
transform = Transform( 40, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Area/Wall1"]
transform = Transform( 40, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Wall2" type="KinematicBody" parent="Area"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.148224, -32.7736, 39.0819 )

[node name="CollisionShape" type="CollisionShape" parent="Area/Wall2"]
transform = Transform( 40, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Area/Wall2"]
transform = Transform( 40, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Wall3" type="KinematicBody" parent="Area"]
transform = Transform( -1.62921e-07, 1, -1.62921e-07, 0, -1.62921e-07, -1, -1, -1.62921e-07, 2.65431e-14, 39.3676, -32.7736, -1.18946 )

[node name="CollisionShape" type="CollisionShape" parent="Area/Wall3"]
transform = Transform( 40, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Area/Wall3"]
transform = Transform( 40, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Wall4" type="KinematicBody" parent="Area"]
transform = Transform( -1.62921e-07, 1, -1.62921e-07, 0, -1.62921e-07, -1, -1, -1.62921e-07, 2.65431e-14, -39.2073, -32.7736, -1.18946 )

[node name="CollisionShape" type="CollisionShape" parent="Area/Wall4"]
transform = Transform( 40, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Area/Wall4"]
transform = Transform( 40, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Pillar" type="KinematicBody" parent="Area"]
transform = Transform( -1.48082e-07, 0.908918, -1.48082e-07, 0, 5.39578e-08, 0.33119, 0.0363752, 5.92629e-09, -9.65511e-16, -21.2953, 13.8382, -0.121605 )

[node name="CollisionShape" type="CollisionShape" parent="Area/Pillar"]
transform = Transform( 40, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Area/Pillar"]
transform = Transform( 40, 1.13687e-13, -5.42101e-19, 2.27374e-12, 1, 2.27374e-12, -5.42101e-19, 1.42109e-14, 40, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = ExtResource( 2 )

[node name="Pillar2" type="KinematicBody" parent="Area"]
transform = Transform( -1.48082e-07, 0.908918, -1.48082e-07, 0, 5.39578e-08, 0.33119, 0.0363752, 5.92629e-09, -9.65511e-16, -21.5037, 13.8382, -17.6644 )

[node name="CollisionShape" type="CollisionShape" parent="Area/Pillar2"]
transform = Transform( 40, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Area/Pillar2"]
transform = Transform( 40, 1.13687e-13, -5.42101e-19, 2.27374e-12, 1, 2.27374e-12, -5.42101e-19, 1.42109e-14, 40, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = ExtResource( 2 )

[node name="Pillar3" type="KinematicBody" parent="Area"]
transform = Transform( -1.48082e-07, 0.908918, -1.48082e-07, 0, 5.39578e-08, 0.33119, 0.0363752, 5.92629e-09, -9.65511e-16, -21.5037, 13.8382, 17.5591 )

[node name="CollisionShape" type="CollisionShape" parent="Area/Pillar3"]
transform = Transform( 40, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Area/Pillar3"]
transform = Transform( 40, 1.13687e-13, -5.42101e-19, 2.27374e-12, 1, 2.27374e-12, -5.42101e-19, 1.42109e-14, 40, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = ExtResource( 2 )

[node name="Pillar4" type="KinematicBody" parent="Area"]
transform = Transform( -1.48082e-07, 0.908918, -1.48082e-07, 0, 5.39578e-08, 0.33119, 0.0363752, 5.92629e-09, -9.65511e-16, 0.0155926, 13.8382, 17.5591 )

[node name="CollisionShape" type="CollisionShape" parent="Area/Pillar4"]
transform = Transform( 40, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Area/Pillar4"]
transform = Transform( 40, 1.13687e-13, -5.42101e-19, 2.27374e-12, 1, 2.27374e-12, -5.42101e-19, 1.42109e-14, 40, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = ExtResource( 2 )

[node name="Pillar5" type="KinematicBody" parent="Area"]
transform = Transform( -1.48082e-07, 0.908918, -1.48082e-07, 0, 5.39578e-08, 0.33119, 0.0363752, 5.92629e-09, -9.65511e-16, 21.261, 13.8382, 17.5591 )

[node name="CollisionShape" type="CollisionShape" parent="Area/Pillar5"]
transform = Transform( 40, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Area/Pillar5"]
transform = Transform( 40, 1.13687e-13, -5.42101e-19, 2.27374e-12, 1, 2.27374e-12, -5.42101e-19, 1.42109e-14, 40, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = ExtResource( 2 )

[node name="Pillar6" type="KinematicBody" parent="Area"]
transform = Transform( -1.48082e-07, 0.908918, -1.48082e-07, 0, 5.39578e-08, 0.33119, 0.0363752, 5.92629e-09, -9.65511e-16, 21.261, 13.8382, -19.1649 )

[node name="CollisionShape" type="CollisionShape" parent="Area/Pillar6"]
transform = Transform( 40, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Area/Pillar6"]
transform = Transform( 40, 1.13687e-13, -5.42101e-19, 2.27374e-12, 1, 2.27374e-12, -5.42101e-19, 1.42109e-14, 40, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = ExtResource( 2 )

[node name="Pillar8" type="KinematicBody" parent="Area"]
transform = Transform( -1.48082e-07, 0.908918, -1.48082e-07, 0, 5.39578e-08, 0.33119, 0.0363752, 5.92629e-09, -9.65511e-16, 0.783516, 13.8382, -19.1649 )

[node name="CollisionShape" type="CollisionShape" parent="Area/Pillar8"]
transform = Transform( 40, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Area/Pillar8"]
transform = Transform( 40, 1.13687e-13, -5.42101e-19, 2.27374e-12, 1, 2.27374e-12, -5.42101e-19, 1.42109e-14, 40, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = ExtResource( 2 )

[node name="Pillar7" type="KinematicBody" parent="Area"]
transform = Transform( -1.48082e-07, 0.908918, -1.48082e-07, 0, 5.39578e-08, 0.33119, 0.0363752, 5.92629e-09, -9.65511e-16, 21.261, 13.8382, 1.06148 )

[node name="CollisionShape" type="CollisionShape" parent="Area/Pillar7"]
transform = Transform( 40, 0, 0, 0, 1, 0, 0, 0, 40, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Area/Pillar7"]
transform = Transform( 40, 1.13687e-13, -5.42101e-19, 2.27374e-12, 1, 2.27374e-12, -5.42101e-19, 1.42109e-14, 40, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = ExtResource( 2 )
